--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/test
-spring.datasource.username=root
-spring.datasource.password=password
+
+spring.datasource.url=jdbc:mysql://${OPENSHIFT_MYSQL_DB_HOST}/${OPENSHIFT_MYSQL_DB_NAME}
+spring.datasource.username = ${OPENSHIFT_MYSQL_DB_USERNAME}
+spring.datasource.password = ${OPENSHIFT_MYSQL_DB_PASSWORD}
 
 application.name=Springboot in Openshift
 
